--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -1,10 +1,11 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{section}{Convolutional Neural Networks}
+    \begin{section}{Laplacian Operators}
         \subfile{sections/2/1}   
     \end{section}
-    \begin{section}{Simplicial Neural Networks} 
+    \newpage
+    \begin{section}{Graphs} 
         \subfile{sections/2/2}    
     \end{section}
 \end{document}
