--- a/tesi/sections/1/1.tex
+++ b/tesi/sections/1/1.tex
@@ -136,83 +136,5 @@
         \label{fig:3}
     \end{figure}
 
-    In fact, we can see in \autoref{fig:3} that the intersection property of simplicial complexes is not satisfied.\\
-
-    \newpage
-    In this first part we analyzed simplicial complexes as peculiar subsets of $\R^n$, which from now on we shall call \ii{geometric simplicial complexes}.
-    Although this approach provides simplicial complexes with the topology inherited from the metric space, it hides the power of simplicial complexes 
-    to describe networks and interactions which exist independently of that topology. To make this distinction clear we will treat
-    simplicial complexes as a realization of more abstract objects called \ii{abstract simplicial complexes}. A richer discussion of abstract simplicial complexes
-    can be found in \cite{comptop} at 3.1 or in \cite{rotman} at 7.3.
-    
-    \begin{defn}
-        Let $\mc{V}$ be a finite set, we define an \ii{abstract simplicial complex} $\mc{A}$ to be 
-        a family of non empy subsets of $\mc{V}$ such that:
-        \begin{enumerate}[(i)]
-            \item if $v \in \mc{V}$, then $\{v\} \in \mc{A},$
-            \item if $\sigma \in \mc{A}$ and $\tau \subset \sigma$, then $\tau \in \mc{A}.$
-        \end{enumerate}
-        We call the member of this family \ii{abstract simplexes}.
-    \end{defn}
-    
-    We call $\mc{V}$ the \ii{vertex set} of $\mc{A}$ and denote it by $Vert(\mc{A})$; since the vertex
-    set is finite, every abstract simplex is finite, therefore we can use the notation $\sigma = \{ v_i \}_{i \in I}$, to denote a simplex in $\mc{A}$.
-    
-    \begin{defn}
-        Let $\mc{A}$ be an abstract simplicial complex and $\mc{G}$ a geometric simplicial complex, if for all $\{x_i\}_{i \in I} \in \mc{A}$ also $[x_i]_{i \in I} \in \mc{G}$
-        we say that $\mc{G}$ is a \ii{geometric realization} of $\mc{A}$.
-    \end{defn}
-
-    While every geometric simplicial complex can be thought as a geometric realization of an abstract simplicial complex, the existence of a geometric 
-    realization for an arbitrary abstract simplicial complex is not trivial at all.
-
-    \begin{thm}
-        \label{thm:2}
-        Let $\mc{A}$ be an $n$-dimensional abstract simplicial complex, then it admits a geometric realization in $\R^{2n+1}$.
-    \end{thm}
-
-    A proof of this theorem can be found in \cite{comptop} at 3.1.\\
-    \hfill \\
-    Both for abstract and geometric simplicial complexes one can define maps called \ii{simplicial maps}. We obtain a category whose
-    equivalences are called isomorphisms. 
-    % The geometric realisation is unluckily not a functor on the whole category of abstract simplicial complexes due to the
-    % limitation imposed by \autoref{thm:2}. Nevertheless, when they exist, the geometric realizations of isomorphic abstract simplicial complexes are theirselves isomorphic.
-    A short discussion of category theory can be found in Appendix \autoref{app:A}.\\
-    \hfill \\
-    In the following sections we shall use abstract simplicial complexes, which can be always thought geometrically in the appropriate $\R^{2d+1}$.
-    % Furthermore, the \ii{simplicial approximation theorem}, which can be found in \cite{singerthorpe,rotman,comptop}, allows us to define a functor from the category of 
-    % simplicial complexes and maps to that of topological spaces and contnuous functions. The preimage of a topological space via this functor is called its \ii{triangulation}.
-    % \hfill \\
-    % Similarly the triangulations of homeomorphic topological spaces are isomorphic.
-
-
-
-    % \begin{defn}
-    %     Let $\mc{A},\mc{B}$ be abstract simplicial complexes, then a \ii{simplicial map} $\phi : \mc{A} \to \mc{B}$ is a function 
-    %     such that whenever $\sigma = \{v_i\}_{i \in I_\sigma} \in \mc{A}$, then $\phi(\{v_i\}_{i \in I_\sigma}) = \{\phi(v_i)\}_{i \in I_\sigma} \in \mc{B}$,
-    %     where $\phi(v_i) \in Vert(\mc{B}) \, \forall i \in I_\sigma$.
-    % \end{defn}
-
-    % Although the vertex to vertex mapping is a quite selective condition on the function we did not prevent it from cramming
-    % abstract simplexes into lower dimensional ones.
-
-    % \begin{thm}
-    %     Abstract simplicial complexes and simplicial maps are a category $\bb{A}$, whose equivalences are called isomorphisms.
-    % \end{thm}
-
-    % One can show that under some dimensional conditions one can define a functor from the category of abstract simplicial complexes
-    % to the category of simplicial complexes.
-
-    % \begin{defn}
-    %     Let $\mc{G}$ be a simplicial complex,  we call the abstract simplicial complex 
-    %     \[ \mc{A} := \{ \{x_i\}_{i \in I} \subset Vert(\mc{G}) : [x_i]_{i \in I} \in \mc{G} \} \]
-    %     a vertex scheme for $\mc{G}$ or equivalently we might say that $\mc{G}$ is a \ii{geometric realization} of $\mc{A}$.
-    % \end{defn}
-
-    % \begin{thm}
-    %     Let $\mc{A}$ be a d-dimensional abstract simplicial complex, it admits a geometric realization in $\R^{2d+1}$.
-    % \end{thm}
-    % Kuratowski theorem proves the prevuois statement to be also sharp.\\
-    % \hfill \\
-    % One could also show that that geometric realizations of isomorphic abstract simplicial complexes are themselves isomorphic.
+    In fact, we can see in \autoref{fig:3} that the intersection property of simplicial complexes is not satisfied.
 \end{document}
