--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -1,91 +1,79 @@
 \documentclass[../1.tex]{subfiles}
-
 \begin{document}
-
-    An important field in algebraic topology is homology theory. We shall discuss homology theory to the extent
-    that allows us to define the laplacian operator on simplicial complexes, for supplementary readings see \cite{singerthorpe,hatcher}.
-    First we want to equip our simplicial complexes with an orientation. So far we have considered the simplex $\{x_i\}_{i \in I}$ to remain
-    unchanged under abritrary reorderings of the index set $I$, but in the most of the application this is not the case.
-
-    \begin{prop}
-        Let $\{x_i\}_{i \in I}$ be a $p$-simplex and
-        \[ \{x_i\}_{i \in I} \sim \{x_i\}_{i \in \pi(I)} \iff sgn(\pi) = 1,\]
-        where $\pi : I \to I$ is a permutation of the indexes and $sgn\pi$ its sign, then $\sim$
-        is an equivalence relation.
-    \end{prop}
-    \begin{rem}
-        Let $S_{p+1}$ be the group of permutations of a $p$-simplex, and $\{\m1,1\}$ a multiplicative group,
-        we recall the fact that $sgn: S_{p+1} \to \{\m1,1\}$ is a group homomorphism, that is \[sgn(\pi\eta) = sgn(\pi)sgn(\eta) \quad \forall \pi,\eta \in S_{p+1}.\]
-    \end{rem}
-    \begin{proof}
-        We divide the proof in three steps:
-        \begin{enumerate}[(i)]
-            \item Since $sgn(id_I) = 1$ we have that $\{x_i\}_{i \in I} \sim \{x_i\}_{i \in id_I(I)} = \{x_i\}_{i \in I} $.
-            \item Since $sgn(\pi)sgn(\pi^{-1}) = sgn(\pi\pi^{-1})=sgn(id_I)=1$ we have that $sgn(\pi) = sgn(\pi^{-1})$, therefore
-                  $ \{x_i\}_{i \in I} \sim \{x_i\}_{i \in \pi(I)} \iff \{x_i\}_{i \in \pi(I)} \sim \{x_i\}_{i \in I}$.
-            \item The transitivity is a consequence of the fact that the product of two even permutations is also even.\qedhere
-        \end{enumerate}
-    \end{proof}
-  
-    \begin{defn}
-        We define an \ii{oriented simplex} $\ket{x_i}_{i \in I}$ to be a simplex $\{x_i\}_{i \in I}$ together with the choice of
-        one out of the two equivalence classs with respect to $\sim$.
-    \end{defn}
-
-    \begin{defn}
-        Let $\mc{A}$ be a simplicial complex and let $G$ denote an arbitrary additive abelian group. We define the \ii{group of p-chains} 
-        \[ C_p(\mc{A},G) := \frac{\{ \sum_{i \in I} g_i \ket{\sigma_i} : g_i \in G \}}{\{g_i\ket{x_0,x_1,...,x_p}+g_i\ket{x_1,x_0,...x_p} : g_i \in G\} }.\]
-    \end{defn}
-    {\color{red} Devo pensarci un po' a questo modo di definirlo, ma credo che intenda semplicemente di indicarle due orientazioni opposte mettendo come fattore 
-    l'inverso. Cercherò di approfondire i free abelian groups dal Lang ed aggiungere una descrizione più dettagliata.}
-
-    For the most of the applications the groups $\Z,\R,\Z_2$ are considered. To keep our notation light we shall write $C_p$ instead of $C_p(\mc{A},G)$.
-
-    \begin{prop}
-        $C_p(\mc{A},G)$ is an abelian group.
-    \end{prop}
-
-    A particularly relevant role in homology theory is played by the \ii{boundary map}. First we define the boundary of an oriented simplex.
-
-    \begin{defn}
-        Let $\ket{\sigma} = \ket{x_0,...,x_{p+1}}$ be an oriented $(p+1)$-simplex. The boundary $\del\ket{\sigma}$ of $\ket{\sigma}$ is the $p$-chain
-        defined by \[ \del_{p+1}\ket{\sigma} := \sum_{i = 0}^{p+1}(-1)^i\ket{x_0,...,\hat{x_i},...,x_{p+1}}\]
-        where the  $\hat{}$  over a symbol means that symbol is deleted.
-    \end{defn}
-
-    \begin{rem}
-        Note that whenever we are able to construct a geometric realization for the oriented simplicial complex, the set $\bigcup_{i = 0}^{p+1}[x_0,...,\hat{x_i},...,x_p+1]$
-        is the topological boundary of $[\sigma]$.
-    \end{rem}
-
-    Furthermore we are able to extend the boundary from simplexes to chains.
+    In this first part we analyzed simplicial complexes as peculiar subsets of $\R^n$, which from now on we shall call \ii{geometric simplicial complexes}.
+    Although this approach provides simplicial complexes with the topology inherited from the metric space, it hides the power of simplicial complexes 
+    to describe networks and interactions which exist independently of that topology. To make this distinction clear we will treat
+    simplicial complexes as a realization of more abstract objects called \ii{abstract simplicial complexes}. A richer discussion of abstract simplicial complexes
+    can be found in \cite{comptop} at 3.1 or in \cite{rotman} at 7.3.
     
     \begin{defn}
-        We define the \ii{boundary map} $\del_{p+1} : C_{p+1} \to C_p$ to be the group homomorphism defined by
-        \[ \del_{p+1}(\sum_{i \in I}g_i\ket{\sigma_i}) := \sum_{i \in I}g_i\del_{p+1}\ket{\sigma_i} .\]
+        Let $\mc{V}$ be a finite set, we define an \ii{abstract simplicial complex} $\mc{A}$ to be 
+        a family of non empy subsets of $\mc{V}$ such that:
+        \begin{enumerate}[(i)]
+            \item if $v \in \mc{V}$, then $\{v\} \in \mc{A},$
+            \item if $\sigma \in \mc{A}$ and $\tau \subset \sigma$, then $\tau \in \mc{A}.$
+        \end{enumerate}
+        We call the member of this family \ii{abstract simplexes}.
     \end{defn}
-
-    An important property of boundary maps is the following, which we shall denote as \ii{homology lemma}.
-
-    \begin{lem}
-        The boundary maps satisfy $\del_p \circ \del_{p+1} = 0$.
-    \end{lem}
-    \begin{proof}
-        Since the boundary maps are linear it is sufficient to check this on the generators.
-        Let $\del_{p+1}\ket{v_0,\dots,v_{p+1}} = \sum_{i=0}^{p+1} (-1)^i\ket{v_0,\dots,\hat{v_i},\dots,v_{p+1}}$ then 
-        \[(\del_p \circ \del_{p+1})\ket{v_0,\dots,v_{p+1}} = \sum_{j=0, j \neq i}^{p+1} \sum_{i=0}^{p+1} (-1)^{i+j}\ket{v_0,\dots,\hat{v_i},\dots,\hat{v_j},\dots,v_{p+1}} = 0. \qedhere \]     
-    \end{proof}
-
-    The homology lemma is necessary to define the \ii{homology group}.
-
+    
+    We call $\mc{V}$ the \ii{vertex set} of $\mc{A}$ and denote it by $Vert(\mc{A})$; since the vertex
+    set is finite, every abstract simplex is finite, therefore we can use the notation $\sigma = \{ v_i \}_{i \in I}$, to denote a simplex in $\mc{A}$.
+    
     \begin{defn}
-        We define the \ii{p-homology group} to be 
-        \[H_p := \frac{ker\del_p}{im\del_{p+1}},\] 
-        where $im\del_{p+1}$ is called the group of simplicial \ii{p-cycles} and
-        $ker\del_p$ is called the group of simplicial \ii{p-boundaries}.
+        Let $\mc{A}$ be an abstract simplicial complex and $\mc{G}$ a geometric simplicial complex, if for all $\{x_i\}_{i \in I} \in \mc{A}$ also $[x_i]_{i \in I} \in \mc{G}$
+        we say that $\mc{G}$ is a \ii{geometric realization} of $\mc{A}$.
     \end{defn}
 
-    The homology group is therefore, intuitively,  the space of cycles that are not boundaries. Without the
-    homology lemma the quotient would not well defined since $im\del_{p+1} \subset ker\del_p$ would not be satisfied.
+    While every geometric simplicial complex can be thought as a geometric realization of an abstract simplicial complex, the existence of a geometric 
+    realization for an arbitrary abstract simplicial complex is not trivial at all.
 
+    \begin{thm}
+        \label{thm:2}
+        Let $\mc{A}$ be an $n$-dimensional abstract simplicial complex, then it admits a geometric realization in $\R^{2n+1}$.
+    \end{thm}
+
+    A proof of this theorem can be found in \cite{comptop} at 3.1.\\
+    \hfill \\
+    Both for abstract and geometric simplicial complexes one can define maps called \ii{simplicial maps}. We obtain a category whose
+    equivalences are called isomorphisms. 
+    % The geometric realisation is unluckily not a functor on the whole category of abstract simplicial complexes due to the
+    % limitation imposed by \autoref{thm:2}. Nevertheless, when they exist, the geometric realizations of isomorphic abstract simplicial complexes are theirselves isomorphic.
+    A short discussion of category theory can be found in Appendix \autoref{app:A}.\\
+    \hfill \\
+    In the following sections we shall use abstract simplicial complexes, which can be always thought geometrically in the appropriate $\R^{2d+1}$.
+    % Furthermore, the \ii{simplicial approximation theorem}, which can be found in \cite{singerthorpe,rotman,comptop}, allows us to define a functor from the category of 
+    % simplicial complexes and maps to that of topological spaces and contnuous functions. The preimage of a topological space via this functor is called its \ii{triangulation}.
+    % \hfill \\
+    % Similarly the triangulations of homeomorphic topological spaces are isomorphic.
+
+
+
+    % \begin{defn}
+    %     Let $\mc{A},\mc{B}$ be abstract simplicial complexes, then a \ii{simplicial map} $\phi : \mc{A} \to \mc{B}$ is a function 
+    %     such that whenever $\sigma = \{v_i\}_{i \in I_\sigma} \in \mc{A}$, then $\phi(\{v_i\}_{i \in I_\sigma}) = \{\phi(v_i)\}_{i \in I_\sigma} \in \mc{B}$,
+    %     where $\phi(v_i) \in Vert(\mc{B}) \, \forall i \in I_\sigma$.
+    % \end{defn}
+
+    % Although the vertex to vertex mapping is a quite selective condition on the function we did not prevent it from cramming
+    % abstract simplexes into lower dimensional ones.
+
+    % \begin{thm}
+    %     Abstract simplicial complexes and simplicial maps are a category $\bb{A}$, whose equivalences are called isomorphisms.
+    % \end{thm}
+
+    % One can show that under some dimensional conditions one can define a functor from the category of abstract simplicial complexes
+    % to the category of simplicial complexes.
+
+    % \begin{defn}
+    %     Let $\mc{G}$ be a simplicial complex,  we call the abstract simplicial complex 
+    %     \[ \mc{A} := \{ \{x_i\}_{i \in I} \subset Vert(\mc{G}) : [x_i]_{i \in I} \in \mc{G} \} \]
+    %     a vertex scheme for $\mc{G}$ or equivalently we might say that $\mc{G}$ is a \ii{geometric realization} of $\mc{A}$.
+    % \end{defn}
+
+    % \begin{thm}
+    %     Let $\mc{A}$ be a d-dimensional abstract simplicial complex, it admits a geometric realization in $\R^{2d+1}$.
+    % \end{thm}
+    % Kuratowski theorem proves the prevuois statement to be also sharp.\\
+    % \hfill \\
+    % One could also show that that geometric realizations of isomorphic abstract simplicial complexes are themselves isomorphic.
 \end{document}
