--- a/tesi/sections/2/2.tex
+++ b/tesi/sections/2/2.tex
@@ -1,15 +1,6 @@
-\documentclass[../2.tex]{subfiles}
+\documentclass[../1.tex]{subfiles}
 \begin{document}
-    Applications of simplicial complexes
-    \begin{defn}[convolution on a simplicial complex]
-    \end{defn}
-    \begin{defn}[heat equation on a simplicial complex]
-        % graphical representation of heat equation evolution on a graph
-    \end{defn}
-    \begin{defn}[pooling on a simplicial complex]
-    \end{defn}
-    \begin{defn}[pooling on a graph]
-    \end{defn}
-    \begin{defn}[simplicialNN]
-    \end{defn}
- \end{document}
+    {\color{red} In questa sezione metterei la descrizione del grafo come fa bronstein con i due prodotti scalari e il laplaciano.
+    I pesi alla fine sono solo una scelta della base del gruppo(in $\R$ spazio) delle p-catene. Inoltre ne approfitterei per fare qui i disegni 
+    e gli esempi relativi a bordo e cobordo}
+\end{document}
