--- a/tesi/bibliography.bib
+++ b/tesi/bibliography.bib
@@ -20,6 +20,13 @@
     year = {1976}
 } 
 
+@book{lang,
+    author = {Serge Lang},
+    title = {Algebra},
+    publisher = {Springer, New York, NY},
+    year = {1955}
+} 
+
 @book{comptop,
   author = {Edelsbrunner, Herbert and Harer, John},
   publisher = {American Mathematical Society},
