--- a/tesi/sections/1/2.tex
+++ b/tesi/sections/1/2.tex
@@ -1,8 +1,8 @@
 \documentclass[../1.tex]{subfiles}
 \begin{document}
-    In this first part we analyzed simplicial complexes as peculiar subsets of $\R^n$, which from now on we shall call \ii{geometric simplicial complexes}.
+    In \autoref{section:1.1} we studied simplicial complexes as subsets of $\R^n$. From now we shall call them \ii{geometric simplicial complexes}.
     Although this approach provides simplicial complexes with the topology inherited from the metric space, it hides the power of simplicial complexes 
-    to describe networks and interactions which exist independently of that topology. To make this distinction clear we will treat
+    to describe networks and interactions which exist independently of that topology. To make this distinction clear, we will treat
     simplicial complexes as a realization of more abstract objects called \ii{abstract simplicial complexes}. A richer discussion of abstract simplicial complexes
     can be found in \cite{comptop} at 3.1 or in \cite{rotman} at 7.3.
     
@@ -13,7 +13,7 @@
             \item if $v \in \mc{V}$, then $\{v\} \in \mc{A},$
             \item if $\sigma \in \mc{A}$ and $\tau \subset \sigma$, then $\tau \in \mc{A}.$
         \end{enumerate}
-        We call the member of this family \ii{abstract simplexes}.
+        We call the members of this family \ii{abstract simplexes}.
     \end{defn}
     
     We call $\mc{V}$ the \ii{vertex set} of $\mc{A}$ and denote it by $Vert(\mc{A})$; since the vertex
