--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -1,11 +1,16 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{section}{Laplacian Operators}
+    \begin{section}{Convolutional Neural Networks}
         \subfile{sections/2/1}   
     \end{section}
-    \newpage
+    \begin{section}{Mathematical Foundation of CNN's}
+        \subfile{sections/2/2}   
+    \end{section}
+    \begin{section}{Laplacian Operators}
+        \subfile{sections/2/3}   
+    \end{section}
     \begin{section}{Graphs} 
-        \subfile{sections/2/2}    
+        \subfile{sections/2/4}    
     \end{section}
 \end{document}
