--- a/tesi/main.tex
+++ b/tesi/main.tex
@@ -31,7 +31,7 @@
 
 
 \theoremstyle{plain}
-\newtheorem{thm}{Theorem}[chapter]
+\newtheorem{thm}{Theorem}[section]
 \newtheorem{lem}[thm]{Lemma}
 \newtheorem{prop}[thm]{Proposition}
 \newtheorem{cor}[thm]{Corollary}
