--- a/tesi/sections/1/4.tex
+++ b/tesi/sections/1/4.tex
@@ -15,7 +15,7 @@
     \begin{defn}
         The dual of the boundary maps which we shall call
         \ii{coboundary maps}, is the group homomorphsm defined by
-        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p(\bra{\sigma}) := \bra{\sigma} \del_{p+1} \quad \forall \bra{\sigma} \in C^p.\]
+        \[ d_{p+1} : C^p \to C^{p+1} \quad d_p\bra{\sigma} := \bra{\sigma} \del_{p+1} \quad \forall \bra{\sigma} \in C^p.\]
         Therefore $(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} \quad \forall \ket{\tau} \in C_p$.
     \end{defn}
 
@@ -41,8 +41,8 @@
     The same Hilbert space structure allows us to represent the coboundary operator $d$ acting on a cochain with its cochain representative.
 
     \begin{defn}
-        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any \\ $\bra{\sigma} \in C^p, \tau \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
-        \[(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} = \bra{\tau} \del^\dagger_{p+1} \ket{\sigma} \quad \forall \ket{\tau} \in C_p. \]
+        Let $d_{p+1} : C^p \to C^{p+1}$ be the coboundary operator, then for any \\ $\bra{\sigma} \in C^p, \ket{\tau} \in C_{p+1}$ we can define its dual representation $\del^\dagger_{p+1}$ by
+        \[(d_{p+1}\bra{\sigma})\ket{\tau} = \bra{\sigma} \del_{p+1} \ket{\tau} = \bra{\tau} \del^\dagger_{p+1} \ket{\sigma} .\]
     \end{defn}
 
     We can notice that our definitions lead to the restatement of the equivalent of the generalized Stokes' theorem on simplicial complexes
