--- a/tesi/sections/2.tex
+++ b/tesi/sections/2.tex
@@ -1,16 +1,10 @@
 \documentclass[../main.tex]{subfiles}
 
 \begin{document}
-    \begin{section}{Convolutional Neural Networks}
+    \begin{section}{Homology and cohomology on graphs}
         \subfile{sections/2/1}   
     \end{section}
-    \begin{section}{Mathematical Foundation of CNN's}
-        \subfile{sections/2/2}   
-    \end{section}
-    \begin{section}{Laplacian Operators}
-        \subfile{sections/2/3}   
-    \end{section}
-    \begin{section}{Graphs} 
-        \subfile{sections/2/4}    
-    \end{section}
+    % \begin{section}{Fourier Transform on Graphs}
+    %     \subfile{sections/2/2}
+    % \end{section}
 \end{document}
